<resources>
    <string name="rate_title">¿Qué te parece mi.tv?</string>
    <string name="rate_message">Nos encantaría saber que piensas</string>
    <string name="rate">Me gusta</string>
    <string name="rate_later">Preguntame de nuevo más tarde</string>
    <string name="rate_cancel">No me gusta tanto</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="tab_tv_guide">Programación</string>
    <string name="tab_activity">Actividad</string>
    <string name="tab_me">Mi perfil</string>
    <string name="today">Hoy</string>
    <string name="tomorrow">Mañana</string>
    <string name="tonight">Esta noche</string>
    <string name="last_night">Ayer por la noche</string>
    <string name="tomorrow_night">Mañana por la noche</string>
    <string name="yesterday">Ayer</string>
    <string name="icon_live">&#x0399;</string>
    <string name="tv_guide_add_channel">Agrega canales a tu programación</string>
    <string name="splash_screen_activity_text">La programación de TV inteligente y sencilla para que nunca te pierdas nada</string>
    <string name="tutorial_skip_button">Omitir</string>
	<string name="tutorial_next_button">Continuar</string>
	<string name="tutorial_learn_more_button">Descubre más</string>
	<string name="tutorial_start_button">Entra</string>
	<string name="tutorial_header_page1">Completa programación</string>
	<string name="tutorial_header_page2">Ver todo por programa</string>
	<string name="tutorial_header_page3">Sugerencias personalizadas</string>
	<string name="tutorial_header_page4">Ajusta tu propia guía</string>
	<string name="tutorial_info_page1"> Desliza el dedo en la barra de tiempo para ver que se está presentando</string>
	<string name="tutorial_info_page2">Programa recordatorios para que nunca te pierdas nada</string>
	<string name="tutorial_info_page3">Encuentra programas populares y sigue tus programas favoritos</string>
	<string name="tutorial_info_page4">Solo elige tus canales preferidos.</string>
    <string name="response_activityfeed">Cargando recomendaciónes</string>
    <string name="response_activityfeed_more">Cargando más recomendaciónes</string>
    <string name="response_configuration_data">Cargando info acerca de la app</string>
    <string name="response_app_version_data">Cargando versión de la app</string>
    <string name="response_tv_dates_data">Verificado la fecha</string>
    <string name="response_tv_channel_id_data">Cargando info por canal</string>
    <string name="response_tv_genres_data">Cargando info por las categorías</string>
    <string name="response_tv_channel_data">Cargando info por todos los canales</string>
    <string name="response_tv_guide_data">Cargando la programación</string>
    <string name="response_user_likes">Cargando el perfil del usuario</string>
    <string name="response_pouplar_broadcasts">Cargando programas populares</string>
    <string name="tv_guide">TV Guide</string>
    <string name="all_categories_tv_tag">Todos</string>
    <string name="unknown_tab">Desconocido</string>
    <string name="tv_guide_rating_icon">TV Guide content rating image</string>
    <string name="content_rating_icon">Content rating icon</string>
    <string name="event_is_live_indicator">EN VIVO</string>
    <string name="no_content_layout_title">Ocurrió algo extraño.</string>
    <string name="no_content_layout_message">No hay programas en esta categoría.</string>
    <string name="loading_message_login_button">Conectando</string>
    <string name="loading_message_guide_new_day">Cargando la programación del día</string>
    <string name="loading_message_tag">Cargando</string>
    <string name="loading_message_broadcastpage_program_info">Cargando info del programa</string>
    <string name="loading_message_popular">Cargando programas populares</string>
    <string name="loading_message_user_profile_data">Cargando tu información</string>
    <string name="loading_message_feed_initial">Cargando sugerencias y populares</string>
    <string name="loading_message_feed_more">Cargando más</string>
    <string name="loading_message_facebook_login">Conectando</string>
    <string name="general_back_press_loading_message">Cargando información...</string>
    <string name="connection_failed_title">Se perdió la conexión a internet</string>
    <string name="connection_failed_message">Verifica la conexión a internet y vuelve a intentarlo.</string>
    <string name="general_error_message_title">Ocurrió algo extraño.</string>
    <string name="general_error_message_message">No se pueden cargar el contenido en este momento. Por favor vuelve a intentarlo más tarde.</string>
    <string name="general_error_message_button">Intentar nuevamente</string>
    <string name="general_no_content_available">No hay contenido en este momento</string>
    <string name="error_connection_lost">Se perdió la conexión a internet</string>
    <string name="product_view_content_expired">Este contenido ya no está disponible.</string>
    <string name="activity_title">Actividad</string>
    <string name="activity_page">Actividad</string>
    <string name="like">Me gusta</string>
    <string name="share">Compartir</string>
    <string name="myprofile_title">Mi Perfil</string>
    <string name="reminders">Recordatorios</string>
    <string name="likes">Me gustan</string>
    <string name="myprofile_my_channels">Selecciona tus canales</string>
    <string name="settings">Configuración</string>
    <string name="myprofile_about_us">Acerca de</string>
    <string name="myprofile_have_account">¿Tienes cuenta?</string>
    <string name="myprofile_logged_in_as">Conectado como:</string>
    <string name="myprofile_info">Regístrate para añadir tus programas y canales favoritos</string>
    <string name="myprofile_terms_of_use">Términos y Condiciones de Uso</string>
    <string name="myprofile_support_bar">SOPORTE</string>
    <string name="liked">Te gusta</string>
    <string name="user_profile_config_title">Configuracion</string>
    <string name="user_profile_config_separator_bar_share_text">SOCIALES</string>
    <string name="user_profile_config_share_title">Compartir mi actividad en mi.tv</string>
    <string name="user_profile_config_share_message">En mi.tv, tus amigos de Facebook verán automáticamente lo que te gusta, lo que compartes y tus recordatorios.</string>
    <string name="user_profile_config_separator_bar_notifications_text">NOTIFICACIONES</string>
    <string name="user_profile_config_notifications_title">Información sobre novedades</string>
    <string name="user_profile_config_notifications_message"> Recibir un correo electronico cuando hay noticias importantes sobre mi.tv</string>
    <string name="settings_contact">Contáctanos</string>
    <string name="settings_terms">Términos y Condiciones de Uso</string>
    <string name="settings_help">Ayuda</string>
    <string name="settings_version">Versión</string>
    <string name="contact_title">Contáctanos</string>
    <string name="contact_temp">Contáctanos</string>
    <string name="terms_temp">Términos y Condiciones de Uso</string>
    <string name="help_title">Ayuda</string>
    <string name="help_temp">Ayuda</string>
    <string name="about_title">Acerca De</string>
    <string name="about_header">Acerca de esta aplicación</string>
    <string name="about_info">Mi.tv - guiamos, inspiramos y socializamos tu experiencia de TV para que nunca te pierdas de nada.</string>
    <string name="about_link"><![CDATA[<a href="http://www.mi.tv/acercade">Lee más acerca de mi.tv aquí</a>]]></string>
    <string name="terms_title">Términos y Condiciones de Uso</string>
    <string name="terms_header">Términos y Condiciones de Uso</string>
    <string name="terms_info">Puedes aprender más acerca de los términos y condiciones de uso relacionados con esta aplicación en nuestro sitio web.</string>
    <string name="terms_link"><![CDATA[<a href="http://www.mi.tv/terminos">Lee más aquí</a>]]></string>
    <string name="cast_and_crew">Elenco</string>
    <string name="view_full_cast_and_crew">Ver más</string>
    <string name="season">Temporada</string>
    <string name="episode">Episodio</string>
    <string name="minutes">min</string>
    <plurals name="left">        <item quantity="one">Queda</item>        <item quantity="other">Quedan</item>    </plurals>
    <string name="from">desde</string>
    <string name="and">y</string>
    <string name="whatelseison_title">Transmitiéndose al mismo tiempo</string>
    <string name="whatelseison_show_all_programs">Ver más transmitiéndose al mismo tiempo</string>
    <string name="upcoming_episodes">Próximos episodios</string>
    <string name="upcoming_episodes_more">Ver más próximos episodios</string>
    <string name="movie">Película</string>
    <string name="sport">Deportes</string>
    <string name="tv_series">Series de TV</string>
    <string name="repetitions_episode">Repeticiones de este episodio</string>
    <string name="repetitions_movie">Repeticiones de esta peli</string>
    <string name="repetitions_sport_event">Repeticiones de este programa</string>
    <string name="repetitions_other">Repeticiones de este programa</string>
    <string name="repetitions_more">Ver más repeticiones</string>
    <string name="repetitions">Repeticiónes</string>
	<string name="broadcast_info">Programa</string>
	<string name="similar_broadcasts_airing_now">En el mismo tiempo</string>
	<string name="more_similar_broadcasts_airing_now">Ver todo</string>
	<string name="cast_info_sport">Conducción</string>
	<string name="cast_info_other">Presentadores</string>
    <plurals name="hour">        <item quantity="one">hora</item>        <item quantity="other">horas</item>    </plurals>
    <plurals name="day">        <item quantity="one">diá</item>        <item quantity="other">diás</item>    </plurals>
    <string name="login_page_title">¿Tienes cuenta?</string>
    <string name="login_page_text">Inicia sesión para añadir tus programas y canales favoritos</string>
    <string name="login_with_facebook">Inicia sesión con Facebook</string>
    <string name="logout_from_facebook">Cerrar sesión</string>
    <string name="login_with_twitter">Inicia sesión con Twitter</string>
    <string name="login_with_mitv">Inicia sesión</string>
    <string name="logout_from_mitv">Cerrar sesión</string>
    <string name="logout_succeeded">Cerrar sesión</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_password_min_chars">Contraseña (al menos 6 cars.)</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_password_long">Contraseña</string>
    <string name="hint_email_long">Correo electrónico</string>
    <string name="hint_firstname">Nombre</string>
    <string name="hint_lastname">Apellido</string>
    <string name="hint_enter_email">Correo electrónico</string>
    <string name="login">Inicia sesión</string>
    <string name="login_here">Inicia sesión</string>
    <string name="reset_password">Cambia tu contraseña</string>
    <string name="sign_in">Inicia sesión</string>
    <string name="cancel">Cancelar</string>
    <string name="sign_in_token_expired_to_title">Your token has expired</string>
    <string name="sign_in_token_expired_to_text">Please sign in again</string>
    <string name="sign_in_token_expired_relogin_button">Login</string>
    <string name="sign_in_to_title">¿No tienes cuenta?</string>
    <string name="sign_in_to_text">Regístrate para añadir tus programas y canales favoritos</string>
    <string name="join">Regístrate</string>
    <string name="forgot_your_password">¿Olvidaste tu contraseña?</string>
    <string name="reset_password_text">Escribe tu correo electrónico y te enviaremos instrucciones para cambiar tu contraseña.</string>
    <string name="submit">Continuar</string>
    <string name="selected_channels">Canales seleccionados:</string>
    <string name="search_channels">Buscar canales</string>
</resources>