<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_load_failed_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:visibility="gone" >

    <TextView
        android:id="@+id/content_failed_title_tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:gravity="center_horizontal"
        android:text="@string/general_error_message_title"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/content_failed_sub_tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/content_failed_title_tv"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/general_error_message_message"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <com.millicom.secondscreen.customviews.FontTextButton
        android:id="@+id/content_failed_reload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/content_failed_sub_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/general_error_message_button"
        android:textColor="@color/black" />

</RelativeLayout>