<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res/com.mitv"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="45dp"
        android:contentDescription="@null"
        android:src="@drawable/mitv_logo" />

    <com.mitv.ui.elements.FontTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center_horizontal"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/rate_title"
        android:textColor="@color/blue3"
        android:textSize="28sp"
        font:fonttextview="roboto_mitv_bold.ttf" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="45dp"
        android:paddingRight="45dp" >

        <com.mitv.ui.elements.FontTextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/rate_message"
            android:textColor="@color/grey4"
            android:textSize="16sp"
            font:fonttextview="roboto_mitv_bold.ttf" />

        <com.mitv.ui.elements.FontButton
            android:id="@+id/rate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_color_selector_signup_login_box"
            android:text="@string/rate"
            android:textColor="@color/white"
            android:textSize="16sp"
            font:fonttextview="roboto_mitv_regular.ttf" />

        <com.mitv.ui.elements.FontButton
            android:id="@+id/rateLater"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_color_selector_signup_login_box"
            android:text="@string/rate_later"
            android:textColor="@color/white"
            android:textSize="16sp"
            font:fonttextview="roboto_mitv_regular.ttf" />

        <com.mitv.ui.elements.FontButton
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:background="@drawable/background_color_selector_logout_box"
            android:text="@string/rate_cancel"
            android:textColor="@color/white"
            android:textSize="16sp"
            font:fonttextview="roboto_mitv_regular.ttf" />
    </LinearLayout>

</LinearLayout>