<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res/com.millicom.secondscreen"
    android:layout_width="fill_parent"
    android:layout_height="60dp"
    android:layout_alignParentBottom="true"
    android:background="@color/light_gray"
    android:orientation="horizontal"
    android:paddingBottom="2dp" >

    <com.millicom.secondscreen.customviews.FontButton
        android:id="@+id/show_tvguide"
        style="@style/homepage_tab_selector"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:paddingBottom="2dp"
        android:text="@string/tab_tv_guide"
        android:textSize="15sp"
        font:fontbutton="fontello.ttf" />

    <com.millicom.secondscreen.customviews.FontButton
        android:id="@+id/show_activity"
        style="@style/homepage_tab_selector"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:paddingBottom="2dp"
        android:text="@string/tab_activity"
        android:textSize="15sp"
        font:fontbutton="fontello.ttf" />

    <com.millicom.secondscreen.customviews.FontButton
        android:id="@+id/show_me"
        style="@style/homepage_tab_selector"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:paddingBottom="2dp"
        android:text="@string/tab_me"
        android:textSize="15sp"
        font:fontbutton="fontello.ttf" />

</LinearLayout>