<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/resetpassword_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.mitv.ui.elements.FontTextView
        android:id="@+id/resetpassword_title_tv"
        style="@style/header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/forgot_your_password" />

    <com.mitv.ui.elements.FontTextView
        android:id="@+id/resetpassword_text_tv"
        style="@style/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetpassword_title_tv"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/reset_password_text" />

    <com.mitv.ui.elements.FontEditText
        android:id="@+id/resetpassword_email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetpassword_text_tv"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_standard"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColorHint="@color/grey2"
        android:textSize="16sp" />

    <com.mitv.ui.elements.FontTextView
        android:id="@+id/resetpassword_error_tv"
        style="@style/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetpassword_email_edittext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-10dp"
        android:gravity="center"
        android:padding="8dp" />

    <com.mitv.ui.elements.FontButton
        android:id="@+id/resetpassword_button"
        style="@style/whitetextbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetpassword_error_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_color_selector_signup_login_box"
        android:padding="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/submit" />

</RelativeLayout>