<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res/com.millicom.seconscreen.customviews"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/signup_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.millicom.secondscreen.customviews.FontEditText
            android:id="@+id/signup_firstname_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:background="@color/gray"
            android:hint="@string/hint_firstname"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp" />

        <com.millicom.secondscreen.customviews.FontEditText
            android:id="@+id/signup_lastname_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_firstname_edittext"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:background="@color/gray"
            android:hint="@string/hint_lastname"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp" />

        <com.millicom.secondscreen.customviews.FontEditText
            android:id="@+id/signup_email_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_lastname_edittext"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:background="@color/gray"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp" />

        <com.millicom.secondscreen.customviews.FontEditText
            android:id="@+id/signup_password_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_email_edittext"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:background="@color/gray"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp" />

        <com.millicom.secondscreen.customviews.FontEditText
            android:id="@+id/signup_password_verify_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_password_edittext"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:background="@color/gray"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp" />

        <com.millicom.secondscreen.customviews.FontButton
            android:id="@+id/signup_register_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_password_verify_edittext"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:background="@color/light_gray"
            android:padding="10dp"
            android:text="@string/join" />
    </RelativeLayout>

</ScrollView>